<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/time_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/margin"
            android:text="@string/cancel"
            android:textColor="?attr/colorPrimary"/>

        <TextView
            android:id="@+id/time_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margin"
            android:text="@string/yes"
            android:textColor="?attr/colorPrimary"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.aigestudio.wheelpicker.widgets.WheelYearPicker
            android:id="@+id/switch_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:wheel_atmospheric="true"
            app:wheel_curved="true"
            app:wheel_cyclic="true"
            app:wheel_item_text_color="@color/black"
            app:wheel_selected_item_text_color="?attr/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="?attr/colorPrimary"/>

        <com.aigestudio.wheelpicker.widgets.WheelMonthPicker
            android:id="@+id/switch_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:wheel_atmospheric="true"
            app:wheel_curved="true"
            app:wheel_cyclic="true"
            app:wheel_item_text_color="@color/black"
            app:wheel_selected_item_text_color="?attr/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textColor="?attr/colorPrimary"/>

        <com.aigestudio.wheelpicker.widgets.WheelDayPicker
            android:id="@+id/switch_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:wheel_atmospheric="true"
            app:wheel_curved="true"
            app:wheel_cyclic="true"
            app:wheel_item_text_color="@color/black"
            app:wheel_selected_item_text_color="?attr/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin"
            android:text="@string/day"
            android:textColor="?attr/colorPrimary"/>
    </LinearLayout>
</LinearLayout>