<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:fitsSystemWindows="true"
              android:gravity="center"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:padding="@dimen/margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/query_tvname"/>

        <AutoCompleteTextView
            android:id="@+id/query_tvname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@color/transparent"
            android:hint="@string/query_tvname"
            android:textSize="@dimen/text_fourteen"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/margin"
        android:background="@color/bottom_text"/>

    <TextView
        android:id="@+id/query_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="@dimen/margin"
        android:drawableLeft="@mipmap/time"
        android:drawablePadding="@dimen/margin"
        android:hint="@string/query_time"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/bottom_text"/>

    <com.andexert.library.RippleView
        android:id="@+id/rip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:rv_centered="true"
        app:rv_color="?attr/colorPrimary">

        <Button
            android:id="@+id/tv_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@mipmap/query"
            android:text="@string/query"
            android:textColor="?attr/colorPrimary"/>
    </com.andexert.library.RippleView>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tvshow_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin"/>

</LinearLayout>